flux/apps/bookorbit/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bookorbit

spec:
  selector:
    matchLabels:
      app: bookorbit
  
  template:
    metadata:
      labels:
        app: bookorbit
    
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      
      volumes:
        - name: tmpfs
          emptyDir:
            medium: Memory
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: books
          persistentVolumeClaim:
            claimName: books

      containers:
        - name: bookorbit
          image: ghcr.io/bookorbit/bookorbit
        
          volumeMounts:
            - name: tmpfs
              mountPath: /tmp
            - name: data
              mountPath: /data
            - name: books
              mountPath: /books
          
          ports:
            - containerPort: 3000
              name: http
          
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
            timeout: 5
            failureThreshold: 3
          
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
            timeout: 5
            failureThreshold: 3
          
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - DAC_OVERRIDE
                - FOWNER
                - SETGID
                - SETUID
