flux/apps/bookorbit/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: bookorbit

spec:
  selector:
    app: bookorbit

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
