flux/apps/bookorbit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bookorbit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd

spec:
  tls:
    - hosts:
        - books.bootleg.technology
      secretName: bookorbit-tls
  rules:
    - host: books.bootleg.technology
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookorbit
                port:
                  name: http
